fix time spacing

--- a/src/platform-apps/channels/styles.scss
+++ b/src/platform-apps/channels/styles.scss
@@ -363,8 +363,8 @@
         font-size: 12px;
         color: theme.$font-color-time;
         visibility: hidden;
-        padding-top: 5px;
-        padding-right: 27px;
+        padding-top: 8px;
+        padding-right: 28px;
       }
 
       &__left {
